--- a/index.html
+++ b/index.html
@@ -8,20 +8,17 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
-  <title>Frontend Mentor | Blog preview card</title>
+  <link rel="stylesheet" href="style.css">
 
+  <title>Frontend Mentor | Blog preview card</title>
 </head>
 <body>
 
-  Learning
-
-  Published 21 Dec 2023
-
-  HTML & CSS foundations
-
-  These languages are the backbone of every website, defining structure, content, and presentation.
-
-  Greg Hooper
+  <p><span class="category">Learning</span></p>
+  <p class="publish-date">Published 21 Dec 2023</p>
+  <h1>HTML & CSS foundations</h1>
+  <p>These languages are the backbone of every website, defining structure, content, and presentation.</p>
+  <p>Greg Hooper</p>
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
