Add header, main, and footer containers

--- a/index.html
+++ b/index.html
@@ -14,11 +14,21 @@
 </head>
 <body>
 
-  <p><span class="category">Learning</span></p>
-  <p class="publish-date">Published 21 Dec 2023</p>
-  <h1>HTML & CSS foundations</h1>
-  <p>These languages are the backbone of every website, defining structure, content, and presentation.</p>
-  <p>Greg Hooper</p>
+  <div class="card">
+    <div class="container">
+      <div class="container__header">
+        <p><span class="category">Learning</span></p>
+        <p class="publish-date">Published 21 Dec 2023</p>
+      </div>
+      <div class="container__main">
+        <h1 class="container__main--title">HTML & CSS foundations</h1>
+        <p>These languages are the backbone of every website, defining structure, content, and presentation.</p>
+      </div>
+      <div class="container__footer">
+        <p>Greg Hooper</p>
+      </div>
+    </div>
+  </div>
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
