Change class names from container to card

--- a/index.html
+++ b/index.html
@@ -5,9 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 
   <title>Frontend Mentor | Blog preview card</title>
@@ -16,15 +13,15 @@
 
   <div class="card">
     <div class="container">
-      <div class="container__header">
+      <div class="card__header">
         <p><span class="category">Learning</span></p>
         <p class="publish-date">Published 21 Dec 2023</p>
       </div>
-      <div class="container__main">
-        <h1 class="container__main--title">HTML & CSS foundations</h1>
+      <div class="card__main">
+        <h1 class="card__main--title">HTML & CSS foundations</h1>
         <p>These languages are the backbone of every website, defining structure, content, and presentation.</p>
       </div>
-      <div class="container__footer">
+      <div class="card__footer">
         <p>Greg Hooper</p>
       </div>
     </div>
