Add image above header

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 
   <div class="card">
     <div class="container">
+      <div class="card__img">
+        <img src="./assets/images/illustration-article.svg" alt="">
+      </div>
       <div class="card__header">
         <p><span class="category">Learning</span></p>
         <p class="publish-date">Published 21 Dec 2023</p>
