Change class name of header and add more font styles to text

--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
         <img src="./assets/images/illustration-article.svg" alt="">
       </div>
       <div class="card__header">
-        <p><span class="category">Learning</span></p>
+        <p class="card__header--category">Learning<p>
         <p class="publish-date">Published 21 Dec 2023</p>
       </div>
       <div class="card__main">
         <h1 class="card__main--title">HTML & CSS foundations</h1>
-        <p>These languages are the backbone of every website, defining structure, content, and presentation.</p>
+        <p class="card__main--text">These languages are the backbone of every website, defining structure, content, and presentation.</p>
       </div>
       <div class="card__footer">
-        <p>Greg Hooper</p>
+        <p class="card__footer--text">Greg Hooper</p>
       </div>
     </div>
   </div>
