Add span element as image container in footer

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <p class="card__main--text">These languages are the backbone of every website, defining structure, content, and presentation.</p>
       </div>
       <div class="card__footer">
-        <p class="card__footer--text">Greg Hooper</p>
+        <p class="card__footer--text"><span class="card__footer--img"></span>Greg Hooper</p>
       </div>
     </div>
   </div>
