--- a/index.html
+++ b/index.html
@@ -27,14 +27,19 @@
         <p class="card__main--text">These languages are the backbone of every website, defining structure, content, and presentation.</p>
       </div>
       <div class="card__footer">
-        <p class="card__footer--text"><span class="card__footer--img"></span>Greg Hooper</p>
+        <p class="card__footer--text">
+          <span class="card__footer--img">
+            <img src="./assets/images/image-avatar.webp" alt="portrait of greg hooper">
+          </span>
+          Greg Hooper
+        </p>
       </div>
     </div>
   </div>
   
   <br><div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">sparky9043</a>.
   </div>
 </body>
 </html>
