--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </div>
   </div>
   
-  <br><div class="attribution">
+  <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">sparky9043</a>.
   </div>
