--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <p class="publish-date">Published 21 Dec 2023</p>
       </div>
       <div class="card__main">
-        <h1 class="card__main--title">HTML & CSS foundations</h1>
+        <h1 class="card__main--title"><a href="#">HTML & CSS foundations</a></h1>
         <p class="card__main--text">These languages are the backbone of every website, defining structure, content, and presentation.</p>
       </div>
       <div class="card__footer">
